welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:14: error: Unit does not take parameters
} else () {
          ^